Moved table over, fixed overflow, got arrow to align

--- a/src/components/WarehouseItemRow/WarehouseItemRow.scss
+++ b/src/components/WarehouseItemRow/WarehouseItemRow.scss
@@ -5,12 +5,12 @@
 
 .warehouse-item-row {
   border-bottom: 1px solid c.$borders;
-  padding: var.$spacing-small;
+  width: inherit;
 }
 
 .warehouse-item {
   display: flex;
-  gap: var.$unit-68;
+  gap: 1rem;
   margin-bottom: 10px;
 
   &__details {
@@ -20,25 +20,20 @@
   &__details > span,
   &__name > span {
     padding: 5px 0;
-    // display: flex;
-    // flex-direction: column;
     font-size: 0.8125rem;
     line-height: 1.25rem;
   }
+}
 
-  &__details > span:before,
-  &__name > span:before {
-    content: attr(data-label);
+label{
     font-weight: bold;
     display: inline-block;
-    width: 120px;
+    width: 100%;
     color: c.$table-column-headers-text;
     font-size: 0.6875rem;
     line-height: 1rem;
     font-weight: t.$semi;
-  }
 }
-
 
 .warehouse-status {
   padding: 3px 8px;
@@ -101,8 +96,6 @@
   // transform: translateY(-50%);
 }
 
-// does not work
-.warehouse-item__contact-info__phone,
-.warehouse-item__contact-info__email {
-  margin-right: 16px; 
+.warehouse-item__name-link{
+  display: flex;
 }
